Changes for 1.4.3:

 - [ZBX-12] fixed calculations in ZABBIX availability report (Alexei)
 - [ZBX-11] fixed Free BSD 4.x 64 bit-related issues (Alexei)
 - [ZBX-10] added Russian translation. Thanks to Hiddenman. (Alexei)
 - fixed PostgreSQL error in synchronization of graphs (Alexei)
 - minor grammar fixes (Alexei)
 - fixed compilation of ZABBIX agent under Mac OS/X (Alexei)
 - fixed memory leak when processing non-existant trapper item (Alexei)
 - fixed unefficient SQL in browsing of events (Alexei)
 - fixed iregexp() (Alexei)
 - fixed detection of __VA_ARGS__ (Eugene)
 - added numeric parameters support for trigger description "$1 $2 .. $9" (Eugene)
 - fixed SQL problem in Configuration->Graphs, all graphs selected (Alexei)

Changes for 1.4.2:

 - fixed validation of trigger expression (Eugene)
 - fixed '{HOSTNAME}' macros using for actions (Eugene)
 - fixed e-mail sending to the pedantic qmail (Eugene)
 - fixed communication between systems with different byte orders (Eugene)
 - fixed frontend to accept trigger function time() (Alexei)
 - ignore trigger FALSE state if it depends on another trigger (Alexei)
 - added new templates: Template_Cisco_PIX_525,
   Template_Dell_PowerConnect_6248, Template_APC_Battery,
   Template_HP_InsightManager, Template_Dell_OpenManage, Template_Cisco_PIX,
   Template_Dell_PowerEdge (Alexei)
 - improved per cpu 'system.cpu.util[]' for linux/solaris (Eugene)
 - added support of 'system.cpu.num' (Eugene)
 - added automatic resolution of DNS names for auto-discovery (Alexei)
 - fixed processing of triggers on delta items. Thanks to Palmertree. (Alexei)
 - updated German translation. Thanks to Beam. (Alexei)
 - changed help string for parameter '-s' of zabbix_sender (Alexei)
 - fixed displaying of text data (EOL) in screens (Alexei)
 - added missing { and } when displaying trigger expressions (Alexei)
 - fixed processing of negative SNMP integers (Alexei)
 - fixed processing of MM in format of log timestamps (Alexei)